# kinect_node

./: CMakeLists.txt  kinect_calibrate.launch  kinect_test.launch  mainpage.dox  manifest.xml  rosdep.yaml
calibration/: ost.txt
src/: kinect_node.cpp
udev/: 99-kinect.rules
